@startuml Chapter_5_3_3_3_Chat_Module

!theme plain
skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #F5F5F5
skinparam classBorderColor #333333
skinparam arrowColor #666666
skinparam ranksep 35
skinparam nodesep 15
skinparam classAttributeIconSize 0

' ============= UI Layer =============
package "UI Layer" {
    struct ChatView {
        - chatService: ChatService
        - authManager: AuthManager
        --
        - body: some View
    }

    class ChatViewModel {
        - messageText: String
        - chatService: ChatService
        --
        + sendMessage() async
    }

    struct MessageBubble
    struct InputBar
}

' ============= Service Layer =============
package "Service Layer" {
    protocol ChatService {
        + messages: [ChatMessage]
        + remoteModel: String
        --
        + sendMessage(text)
        + clearChat()
    }

    class ChatServiceImpl {
        + messages: [ChatMessage]
        + remoteModel: String
        - networkClient: NetworkClient
        - authManager: AuthManager
        --
        + sendMessage(text)
        + clearChat()
    }
}

' ============= Data Models =============
package "Data Models" {
    struct ChatMessage {
        - id: String
        - role: Role
        - text: String
        - date: Date
    }

    enum Role {
        user
        assistant
    }

    struct ChatRequest {
        - messages: [ChatMessage]
        - remoteModel: String?
    }

    struct ChatResponse {
        - reply: String
    }
}

' ============= Dependencies =============
package "External" <<Frame>> {
    class NetworkClient <<external>>
    protocol AuthManager <<external>>
}

' ===== RELATIONSHIPS =====
' Composition (View contains ViewModel)
ChatView *-down- ChatViewModel

' Realization (interface implementation)
ChatServiceImpl ..|> ChatService

' Association (fields)
ChatView --> ChatService
ChatView --> AuthManager
ChatViewModel --> ChatService
ChatServiceImpl --> NetworkClient
ChatServiceImpl --> AuthManager
ChatService --> ChatMessage
MessageBubble --> ChatMessage

' Dependency (used in methods/views only)
ChatView ..> MessageBubble
ChatView ..> InputBar
ChatViewModel ..> ChatRequest
ChatService ..> ChatResponse
ChatServiceImpl ..> ChatRequest
MessageBubble ..> Role

' ============= Hidden links for vertical layout =============
ChatView -[hidden]down- MessageBubble
MessageBubble -[hidden]right- InputBar
ChatViewModel -[hidden]down- ChatServiceImpl
ChatService -[hidden]down- ChatMessage
ChatMessage -[hidden]right- ChatRequest
Role -[hidden]right- ChatResponse
ChatMessage -[hidden]down- Role
ChatRequest -[hidden]down- ChatResponse
ChatResponse -[hidden]down- NetworkClient
NetworkClient -[hidden]right- AuthManager

@enduml
